src/test/ui/const-generics/issues/issue-66205.min.stderr
error: generic parameters must not be used inside of non-trivial constant values
  --> $DIR/issue-66205.rs:8:14
   |
LL |     fact::<{ N - 1 }>();
   |              ^ non-trivial anonymous constants must not depend on the parameter `N`
   |
   = help: it is currently only allowed to use either `N` or `{ N }` as generic constants

error: aborting due to previous error

